// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RetryOnError should configure namespace brackets case: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
-/******/ 	      var ns = __webpack_require__.RetryOnError;
+/******/ 	      var ns = window['__NS__'];
@@ Change 2 @@
-/******/ 	            __webpack_require__.RetryOnError = __webpack_require__.RetryOnError || {};
+/******/ 	            window['__NS__'] = window['__NS__'] || {};
@@ Change 3 @@
-/******/ 	            var ns = __webpack_require__.RetryOnError;
+/******/ 	            var ns = window['__NS__'];
"
`;

exports[`RetryOnError should configure namespace dot case: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
-/******/ 	      var ns = __webpack_require__.RetryOnError;
+/******/ 	      var ns = Ya.__NS__;
@@ Change 2 @@
-/******/ 	            __webpack_require__.RetryOnError = __webpack_require__.RetryOnError || {};
+/******/ 	            Ya.__NS__ = Ya.__NS__ || {};
@@ Change 3 @@
-/******/ 	            var ns = __webpack_require__.RetryOnError;
+/******/ 	            var ns = Ya.__NS__;
"
`;

exports[`RetryOnError should configure namespace requireFn case: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
-/******/ 	      var ns = __webpack_require__.RetryOnError;
+/******/ 	      var ns = __webpack_require__.__NS__;
@@ Change 2 @@
-/******/ 	            __webpack_require__.RetryOnError = __webpack_require__.RetryOnError || {};
+/******/ 	            __webpack_require__.__NS__ = __webpack_require__.__NS__ || {};
@@ Change 3 @@
-/******/ 	            var ns = __webpack_require__.RetryOnError;
+/******/ 	            var ns = __webpack_require__.__NS__;
"
`;

exports[`RetryOnError should configure namespace top level case: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
-/******/ 	      var ns = __webpack_require__.RetryOnError;
+/******/ 	      var ns = window.__NS__;
@@ Change 2 @@
-/******/ 	            __webpack_require__.RetryOnError = __webpack_require__.RetryOnError || {};
+/******/ 	            window.__NS__ = window.__NS__ || {};
@@ Change 3 @@
-/******/ 	            var ns = __webpack_require__.RetryOnError;
+/******/ 	            var ns = window.__NS__;
"
`;

exports[`RetryOnError should configure retry: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
-/******/ 	            ns.max = ns.max || (1 || 0);
+/******/ 	            ns.max = ns.max || (2 || 0);
"
`;

exports[`RetryOnError should configure waitOnline: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
-/******/ 	      return Promise.resolve()
+/******/ 	      return ns
+/******/ 	        .waitOnline()
@@ Change 2 @@
+/******/ 	                ns.waitOnline = function() {
+/******/ 	                    return new Promise(function(resolve) {
+/******/ 	                        if (navigator.onLine) {
+/******/ 	                            resolve();
+/******/ 	                        } else {
+/******/ 	                            window.addEventListener('online', function onOnline() {
+/******/ 	                                window.removeEventListener('online', onOnline);
+/******/ 	                                resolve();
+/******/ 	                            });
+/******/ 	                        }
+/******/ 	                    });
+/******/ 	                };
+/******/ 	            
+/******/
"
`;

exports[`RetryOnError should setup default retry: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
-/******/ 	  return Promise.reject(originalError);
+/******/ 	  return [
+/******/ 	    function(installedChunks, chunkId, originalError, result) {
+/******/ 	      var ns = __webpack_require__.RetryOnError;
+/******/ 	      var retries = ns.retries[chunkId] || 0;
+/******/
+/******/ 	      if (retries >= ns.max) {
+/******/ 	        return result;
+/******/ 	      }
+/******/
+/******/ 	      ns.retries[chunkId] = retries + 1;
+/******/
+/******/ 	      return Promise.resolve()
+/******/ 	        .then(function() {
+/******/ 	          return __webpack_require__.e(chunkId);
+/******/ 	        })
+/******/ 	        .then(function() {}); // Resolve empty value
+/******/ 	    }
+/******/ 	  ]
+/******/ 	    .reduce(function(promise, strategy) {
+/******/ 	      return promise.then(function(result) {
+/******/ 	        return strategy(installedChunks, chunkId, originalError, result);
+/******/ 	      });
+/******/ 	    }, Promise.resolve(originalError))
+/******/ 	    .then(function(result) {
+/******/ 	      return result ? Promise.reject(result) : Promise.resolve();
+/******/ 	    });
@@ Change 2 @@
+/******/ 	            __webpack_require__.RetryOnError = __webpack_require__.RetryOnError || {};
+/******/
+/******/ 	            var ns = __webpack_require__.RetryOnError;
+/******/ 	            ns.max = ns.max || (1 || 0);
+/******/ 	            ns.retries = ns.retries || {};
+/******/ 	        
+/******/
"
`;
